<resources>
    <string name="app_name">MyPetMovieProject</string>
    <string name="Hero">ImageHero</string>
    <string name="age">13+</string>
    <string name="name">Avengers:\nEnd Game</string>
    <string name="category_films">Action, Adventure, Fantasy</string>
    <string name="star">Star</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="story_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="back">Back</string>
    <string name="robert">robert</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="mark">mark</string>
    <string name="mark_ruffalo">Mark\nRuffalo</string>
    <string name="hemswort">hemswort</string>
    <string name="chris_hemsworth">Chris\nHemsworth</string>
    <string name="movies_list_title">Movies list</string>
    <string name="mini_age">mini_age</string>
    <string name="mini_like">like</string>
    <string name="mini_name">Avengers: End Game</string>
    <string name="mini_time">137 MIN</string>
    <string name="fragment_actors_chosen_text">You chose: %1$s</string>
</resources>