<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_mini_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mini_guide_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <ImageView
        android:id="@+id/shape_corner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:background="@drawable/mini_hero"
        android:contentDescription="@string/Hero"
        android:foreground="@drawable/ic_mask_movie_avengers"
        android:src="@drawable/mini_shape"
        app:layout_constraintBottom_toBottomOf="@id/mini_guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mini_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mini_age_marginStart"
        android:layout_marginTop="@dimen/mini_age_marginTop"
        android:contentDescription="@string/mini_age"
        app:layout_constraintStart_toStartOf="@id/shape_corner"
        app:layout_constraintTop_toTopOf="@id/shape_corner"
        app:srcCompat="@drawable/ic_mini_age" />


    <ImageView
        android:id="@+id/mini_like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginTop="@dimen/mini_like_marginTop"
        android:layout_marginEnd="@dimen/mini_like_marginEnd"
        android:contentDescription="@string/mini_like"
        app:layout_constraintEnd_toEndOf="@id/shape_corner"
        app:layout_constraintTop_toTopOf="@id/shape_corner"
        app:srcCompat="@drawable/ic_mini_like" />

    <ImageView
        android:id="@+id/mini_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@id/mini_guide_line"
        app:layout_constraintEnd_toStartOf="@+id/mini_icon_2"
        app:layout_constraintStart_toStartOf="@id/shape_corner"
        app:srcCompat="@drawable/ic_mini_star" />

    <ImageView
        android:id="@+id/mini_icon_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@id/mini_icon_1"
        app:layout_constraintEnd_toStartOf="@+id/mini_icon_3"
        app:layout_constraintStart_toEndOf="@+id/mini_icon_1"
        app:srcCompat="@drawable/ic_mini_star" />

    <ImageView
        android:id="@+id/mini_icon_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@id/mini_icon_1"
        app:layout_constraintEnd_toStartOf="@+id/mini_icon_4"
        app:layout_constraintStart_toEndOf="@+id/mini_icon_2"
        app:srcCompat="@drawable/ic_mini_star" />

    <ImageView
        android:id="@+id/mini_icon_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@id/mini_icon_1"
        app:layout_constraintEnd_toStartOf="@+id/mini_icon_5"
        app:layout_constraintStart_toEndOf="@+id/mini_icon_3"
        app:srcCompat="@drawable/ic_mini_star" />

    <ImageView
        android:id="@+id/mini_icon_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@id/mini_icon_1"
        app:layout_constraintEnd_toStartOf="@+id/mini_reviews"
        app:layout_constraintStart_toEndOf="@+id/mini_icon_4"
        app:srcCompat="@drawable/ic_mini_star_off" />

    <TextView
        android:id="@+id/mini_reviews"
        style="@style/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/reviews"
        android:textColor="@color/gray"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/mini_icon_1"
        app:layout_constraintStart_toEndOf="@+id/mini_icon_5"
        app:layout_constraintTop_toTopOf="@id/mini_icon_1"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/mini_category_movies"
        style="@style/Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/category_films"
        android:textColor="@color/pink"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/mini_icon_1"
        app:layout_constraintStart_toStartOf="@id/shape_corner"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/mini_name_film"
        style="@style/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mini_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/shape_corner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/shape_corner"
        app:layout_constraintTop_toTopOf="@id/mini_guide_line" />

    <TextView
        android:id="@+id/mini_time"
        style="@style/Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini_time"
        android:textColor="@color/gray"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/mini_name_film"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mini_name_film"
        app:layout_constraintTop_toBottomOf="@+id/mini_name_film"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>