<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_black"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_image_guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <ImageView
            android:id="@+id/ImageHero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/Hero"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers"
            app:layout_constraintBottom_toTopOf="@+id/bottom_image_guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/title_shadow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_mask_movie_avengers"
            app:layout_constraintBottom_toBottomOf="@id/bottom_image_guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_image_guideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginBottom="@dimen/marginBack"
            android:alpha="0.5"
            android:text="@string/back"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/back" />

        <TextView
            android:id="@+id/AgeText"
            style="@style/Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_image_guideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ImageHero"
            app:layout_constraintVertical_bias="0.75" />


        <TextView
            android:id="@+id/name_film"
            style="@style/Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:layout_marginTop="@dimen/marginNameFilm"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/category_film_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AgeText" />

        <TextView
            android:id="@+id/category_film_text"
            style="@style/Light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/category_films"
            android:textAlignment="textStart"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_film" />


        <ImageView
            android:id="@+id/star_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:layout_marginTop="@dimen/marginRating"
            android:layout_marginEnd="@dimen/marginEnd"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toStartOf="@+id/star_icon2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_film_text" />

        <ImageView
            android:id="@+id/star_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toStartOf="@id/star_icon3"
            app:layout_constraintStart_toEndOf="@id/star_icon1"
            app:layout_constraintTop_toTopOf="@+id/star_icon1" />

        <ImageView
            android:id="@+id/star_icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toStartOf="@+id/star_icon4"
            app:layout_constraintStart_toEndOf="@id/star_icon2"
            app:layout_constraintTop_toTopOf="@+id/star_icon1" />

        <ImageView
            android:id="@+id/star_icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toStartOf="@+id/star_icon5"
            app:layout_constraintStart_toEndOf="@id/star_icon3"
            app:layout_constraintTop_toTopOf="@+id/star_icon1" />

        <ImageView
            android:id="@+id/star_icon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star_off"
            app:layout_constraintEnd_toStartOf="@+id/reviews"
            app:layout_constraintStart_toEndOf="@id/star_icon4"
            app:layout_constraintTop_toTopOf="@+id/star_icon1" />

        <TextView
            android:id="@+id/reviews"
            style="@style/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:text="@string/reviews"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/star_icon1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/star_icon5"
            app:layout_constraintTop_toTopOf="@id/star_icon1" />

        <TextView
            android:id="@+id/storyline"
            style="@style/Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:layout_marginTop="@dimen/marginStoryline"
            android:text="@string/storyline"
            android:textColor="@color/white_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_film_text"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/storyline_text"
            style="@style/Thin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginHorizontal"
            android:text="@string/story_text"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:text="@string/cast"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/rv_actors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_text"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginHorizontal"
            android:layout_marginEnd="@dimen/marginHorizontal"
            android:overScrollMode="never"
            tools:listitem="@layout/view_holder_actor"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>